kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindmeld-api-service
  namespace: default
  labels:
    app: mindmeld-api
spec:
  # ClusterIP is best practice here because the ALB will route directly to Pod IPs
  type: ClusterIP
  selector:
    app: mindmeld-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
